# LobbyWatch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.toml  requirements.txt
.github/workflows/: aws-deploy.yml  aws-terraform-plan.yml
backend/: aws_env.py  graph.py  lambda_api.py  lambda_export.py  lambda_worker.py  main.py  models.py  post_export_validator.py  requirements.txt  search.py  sqlite_export.py
backend/tests/: test_data_status.py  test_lda_worker.py  test_sqlite_export.py
cli/: pyproject.toml
cli/lobbywatch/: cli.py  db.py
cli/lobbywatch/commands/: analysis.py  entity.py  graph.py  search.py  update.py
cli/scripts/: export_sqlite.py
cli/tests/: conftest.py  test_analysis.py  test_cli.py  test_db.py  test_entity.py  test_graph.py  test_search.py  test_update.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: svg-to-png.mjs
frontend/src/: App.jsx  api.js  styles.css
infra/terraform/: .terraform.lock.hcl  README.md  dev.tfvars.example  main.tf  outputs.tf  prod.tfvars.example  variables.tf  versions.tf
lobbying-explorer/: .env.example  README.md  docker-compose.yml
lobbying-explorer/backend/: graph.py  main.py
lobbying-explorer/frontend/: index.html  (+2 more)
pipeline/: 002_fts_and_issues.sql  backfill_committees.py  db.py  dedup_orgs.py  ingest_congress.py  ingest_fec.py  ingest_lda.py  ingest_lda_contributions.py  ingest_votes.py  requirements.txt  smoke_test.py
scripts/: build_lambda_packages.sh  deploy_frontend_s3.sh  migrate_filtered_to_rds.sh
(+18 files in other folders)
